Update to use new colour variable names; fix container widths of the overflows helper.

--- a/assets/_scss/base/_code.scss
+++ b/assets/_scss/base/_code.scss
@@ -4,11 +4,11 @@ pre {
 
 code {
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
-    background-color: $colour__grey--lighter !important;
+    background-color: $ds_colour__grey--lighter !important;
     display: inline-block !important;
     font-size: $small-size;
-    border-left: 4px solid $colour__grey--lighter;
-    border-right: 4px solid $colour__grey--lighter;
+    border-left: 4px solid $ds_colour__grey--lighter;
+    border-right: 4px solid $ds_colour__grey--lighter;
 }
 
 
