--- a/assets/_scss/components/_component.sub-banner.scss
+++ b/assets/_scss/components/_component.sub-banner.scss
@@ -6,7 +6,7 @@
 
 
 .sub-banner {
-    background-color: $colour__blue--dark;
+    background-color: $ds_colour__blue--dark;
 }
 
 .sub-banner__content {
