--- a/assets/_scss/components/_datepicker.scss
+++ b/assets/_scss/components/_datepicker.scss
@@ -3,11 +3,11 @@
     position: relative;
 
     &__dialog {
-        background-color: $colour__white;
+        background-color: $ds_colour__white;
         box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
         display: none;
         padding: 8px;
-        outline: 1px solid $colour__border;
+        outline: 1px solid $ds_colour__border;
         outline-offset: -1px;
         position: absolute;
         top: 0;
@@ -40,7 +40,7 @@
         &__navbuttons {
             button {
                 background-color: transparent;
-                color: $colour__text !important;
+                color: $ds_colour__text !important;
                 font-weight: $normal;
                 height: 40px;
                 margin: 0;
@@ -59,14 +59,14 @@
             }
 
             th {
-                color: $colour__text--secondary;
+                color: $ds_colour__text--secondary;
                 font-size: $small-size;
                 font-weight: $normal;
             }
 
             button {
                 background-color: transparent;
-                color: $colour__text;
+                color: $ds_colour__text;
                 font-weight: $normal;
                 height: 40px;
                 margin: 0;
@@ -76,13 +76,13 @@
                 @include blocklink;
 
                 &[disabled="true"] {
-                    background-color: $colour__link--disabled__background;
-                    color: $colour__link--disabled;
+                    background-color: $ds_colour__link--disabled__background;
+                    color: $ds_colour__link--disabled;
                 }
 
                 &.#{$pl-prefix}current:not(:focus) {
-                    background: $colour__brand;
-                    color: $colour__white;
+                    background: $ds_colour__brand;
+                    color: $ds_colour__white;
                 }
             }
         }
